--- a/public/index.html
+++ b/public/index.html
@@ -442,7 +442,7 @@
 
     <script>
         // Configuration - UPDATE THIS WITH YOUR VERCEL DEPLOYMENT URL
-        const API_BASE_URL = 'https://analyst-rho.vercel.app/';  // Change this! wazzaaaappppp
+        const API_BASE_URL = 'https://analyst-rho.vercel.app';  // Change this! wazzaaaappppp
         
         let allPairsData = [];
         let currentFilter = null;
